@@ -3,6 +3,7 @@
 = 3.1.0 =
 * WordPress 6.5 compatible.
 * Code doc corrections and revisions.
+* Implements cautionary filter adjustments to avoid potential circular dependencies.
 
 = 3.0.0 =
 * WordPress 6.5 compatible.
